# jupyrest

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICESNSE.txt  README.md  fix_line_endings.py  jupyrest.code-workspace  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
src/jupyrest/: .pre-commit-config.yaml  dev_setup.sh  http.md  pyproject.toml
src/jupyrest/jupyrest/: __init__.py  __main__.py  cli.py  client.py  client2.py  contracts.py  dependencies.py  dependency_manager.py  domain.py  error.py  errors.py  errors2.py  executors.py  file_object.py  model.py  nbschema.py  notebook_config.py  plugin.py  resolvers.py
src/jupyrest/jupyrest/default_impl/: builder.py  execution_task_handler.py  executor.py  file_namer.py  input_output_validator.py  notebook_converter.py  notebook_repository.py  output_reader.py  parameterizer.py
src/jupyrest/jupyrest/file_io/: core.py  in_memory.py
src/jupyrest/jupyrest/http/: asgi.py  models.py
src/jupyrest/jupyrest/http/static/: execute_notebook.html
src/jupyrest/jupyrest/infra/azure/: builder.py  execution_repository.py  execution_task_handler.py  file_object_client.py
src/jupyrest/jupyrest/infra/in_memory/: builder.py  execution_repository.py  file_object_client.py
src/jupyrest/jupyrest/notebook_execution/: commands.py  common.py  entity.py  queries.py  routes.py
src/jupyrest/jupyrest/v2/value_objects/: file_object.py  notebook.py
src/jupyrest/jupyrest/workers/: base.py  grpc.py  http.py
src/jupyrest/protobufs/: jupyrest.proto
src/jupyrest/tests/: conftest.py  http_test.py  start_http.py  test_grpc.py  test_model.py  test_nbschema.py  test_plugin.py  test_resolvers.py  test_worker.py
src/jupyrest/tests/notebooks/: analysis.config.json  analysis.ipynb  delay.config.json  delay.generated.py  delay.ipynb  error.generated.py  error.ipynb  io_contract_example.config.json  io_contract_example.generated.py  io_contract_example.ipynb  model_io.config.json  model_io.generated.py  model_io.ipynb
src/jupyrest_docs/: pyproject.toml
src/jupyrest_docs/jupyrest_docs/: GettingStarted.generated.py  GettingStarted.ipynb  _config.yml  _toc.yml  intro.md  usage.generated.py  usage.ipynb
src/jupyrest_example/: Demo.generated.py  Demo.ipynb  pyproject.toml  repository.html  start_http.py
src/jupyrest_example/jupyrest_example/: __init__.py
src/jupyrest_example/jupyrest_example/notebooks/hello_world/: error.config.json  error.generated.py  error.ipynb  hello_world.config.json  hello_world.ipynb
src/jupyrest_example/jupyrest_example/notebooks/portfolio_analysis/: Portfolio_Analysis.config.json  Portfolio_Analysis.generated.py  Portfolio_Analysis.ipynb
src/jupyrest_example/jupyrest_example/notebooks/portfolio_analysis/stock_data/: stock_data.csv
src/jupyrest_function/: function_app.py  requirements.txt
src/jupyrest_function/notebooks/: hello_world.config.json  hello_world.ipynb
src/jupyrest_function2/: function_app.py  local.settings.json
src/my-ts-react-app/: package.json
src/my-ts-react-app/public/: index.html
src/my-ts-react-app/src/: App.tsx  SchemaForm.tsx
src/react-jsonform-test/: package.json
src/react-jsonform-test/src/: Validator.ts  index.js
