[tool.poetry]
name = "jupyrest"
version = "0.1.0"
description = "A tool to expose Jupyter notebooks as a REST API."
authors = ["Koushik Krishnan <kokrishn@microsoft.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jsonschema = "^3.2.0"
nbformat = "^5.1.3"
nbclient = "^0.5.1"
entrypoints = "^0.3"
scrapbook = "^0.5.0"
pydantic = "^1.8"
fastapi = "^0.65.2"
# textwrap3 = "^0.9.2"
uvicorn = "^0.14.0"
ipython = "^7.25.0"
ipykernel = "^6.0.1"
nbconvert = "^7.2.10"
anyio = "^4.3.0"
aiohttp = "^3.9.3"
papermill = "^2.5.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
pytest-xprocess = "^0.23.0"
pre-commit = "^3.6.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

