[tool.poetry]
name = "jupyrest-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jupyrest_docs"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
