[tool.poetry]
name = "jupyrest-example"
description = "An example Jupyrest project"
authors = ["John Smith <john@example.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
jupyrest = {path = "../jupyrest", develop = true}
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.5"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."jupyrest.plugins"]
"default" = "jupyrest_example:plugin"