[tool.poetry]
name = "jupyrest-example"
description = "An example Jupyrest project"
authors = ["John Smith <john@example.com>"]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.5"
jupyrest = "^0.2.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
jupytext = "^1.16.1"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"